<?xml version="1.0" encoding="utf-8"?><!-- 数据与显示设置：账单显示、分类与资产 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- 账单显示 -->
    <PreferenceCategory android:title="@string/setting_category_bill_display">
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/setting2_icon_rule"
            android:key="showRuleName"
            android:summary="@string/setting_bill_show_rule_summary"
            android:title="@string/setting_bill_show_rule" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_palette"
            android:key="isExpenseRed"
            android:summary="@string/settings_expense_red_color_summary"
            android:title="@string/settings_expense_red_color" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_trending_up"
            android:key="isIncomeUp"
            android:summary="@string/settings_income_up_arrow_summary"
            android:title="@string/settings_income_up_arrow" />

        <androidx.preference.Preference
            android:icon="@drawable/ic_open_in_new"
            android:key="remarkFormat"
            android:summary="@string/setting_bill_remark_desc"
            android:title="@string/setting_bill_remark" />
    </PreferenceCategory>

    <!-- 分类与资产 -->
    <PreferenceCategory android:title="@string/setting_category_category_asset">
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_category"
            android:key="autoCreateCategory"
            android:summary="@string/setting_auto_create_category_summary"
            android:title="@string/setting_auto_create_category" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/setting_icon_ai_map"
            android:key="autoAssetMapping"
            android:summary="@string/setting_auto_asset_mapping_summary"
            android:title="@string/setting_auto_asset_mapping" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_account_balance_wallet"
            android:key="featureAssetManage"
            android:summary="@string/setting_asset_manager_summary"
            android:title="@string/setting_asset_manager" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/float_money"
            android:key="featureMultiCurrency"
            android:summary="@string/setting_currency_manager_summary"
            android:title="@string/setting_currency_manager" />
    </PreferenceCategory>

    <!-- 账本配置 -->
    <PreferenceCategory android:title="@string/setting_category_book_config">
        <androidx.preference.Preference
            android:icon="@drawable/ic_book"
            android:key="defaultBook"
            android:summary="@string/setting_default_book_summary"
            android:title="@string/setting_default_book" />

        <androidx.preference.Preference
            android:icon="@drawable/ic_open_in_new"
            android:key="bookApp"
            android:summary="@string/setting_book_app_summary"
            android:title="@string/setting_book_app" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_book"
            android:key="featureMultiBook"
            android:summary="@string/setting_book_manager_summary"
            android:title="@string/setting_book_manager" />
    </PreferenceCategory>

</PreferenceScreen>

