<?xml version="1.0" encoding="utf-8"?><!-- 智能功能设置：AI助手、高级特性 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- AI助手 -->
    <PreferenceCategory android:title="@string/setting_category_ai">
        <androidx.preference.Preference
            android:icon="@drawable/ic_ai"
            android:key="aiConfig"
            android:summary="@string/setting_ai_config_summary"
            android:title="@string/setting_ai_config" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_ai"
            android:key="aiBillRecognition"
            android:summary="@string/setting_ai_bill_recognition_summary"
            android:title="@string/setting_ai_bill_recognition" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/setting2_icon_category"
            android:key="aiCategoryRecognition"
            android:summary="@string/setting_ai_category_recognition_summary"
            android:title="@string/setting_ai_category_recognition" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/setting_icon_ai_map"
            android:key="aiAssetMapping"
            android:summary="@string/setting_ai_asset_mapping_summary"
            android:title="@string/setting_ai_asset_mapping" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_receipt_long"
            android:key="aiMonthlySummary"
            android:summary="@string/setting_ai_monthly_summary_summary"
            android:title="@string/setting_ai_monthly_summary" />

        <androidx.preference.Preference
            android:defaultValue=""
            android:dependency="aiMonthlySummary"
            android:icon="@drawable/icon_edit"
            android:key="aiSummaryPrompt"
            android:summary="@string/setting_ai_summary_prompt_summary"
            android:title="@string/setting_ai_summary_prompt" />
    </PreferenceCategory>

    <!-- 高级特性 -->
    <PreferenceCategory android:title="@string/setting_category_advanced_features">
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/setting_icon_reimbursement"
            android:key="featureReimbursement"
            android:summary="@string/setting_reimbursement_summary"
            android:title="@string/setting_reimbursement" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/setting_icon_debt"
            android:key="featureDebt"
            android:summary="@string/setting_debt_summary"
            android:title="@string/setting_debt" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/setting_icon_fee"
            android:key="featureFee"
            android:summary="@string/setting_fee_summary"
            android:title="@string/setting_fee" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_label"
            android:key="featureTag"
            android:summary="@string/setting_tag_summary"
            android:title="@string/setting_tag" />
    </PreferenceCategory>

</PreferenceScreen>

